# mcagent

./: README.md  pyproject.toml
src/mcagent/: cli.py  messages.py  tools.py  types.py
