[project]
name = "mcagent"
version = "0.1.0"
description = "Minimal agent with minimal library use"
readme = "README.md"
authors = [{ name = "Marcus McCurdy", email = "marcus.mccurdy@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "ipython>=9.10.0",
]

[project.scripts]
mcagent = "mcagent.cli:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
